--- a/cfn.yaml
+++ b/cfn.yaml
@@ -6,6 +6,7 @@ Resources:
     Properties:
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
+        - arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess
       Description: Role to run formToPDFFunction
       AssumeRolePolicyDocument:
         Version: 2012-10-17
@@ -21,16 +22,9 @@ Resources:
     Properties:
       Description: Function which converts form data to google slide
       Runtime: python3.6
-      Handler: index.handler
+      Handler: main.handler
       Timeout: 10
       Role: !GetAtt formToPDFRole.Arn
       Code:
-        ZipFile: |
-          import json
-
-          def handler(event, context):
-              # TODO implement
-              return {
-                  'statusCode': 200,
-                  'body': json.dumps('Hello from Lambda!')
-              }
+        S3Bucket: project-f-form-to-pdf
+        S3Key: lambda_final.zip
